--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,7 +1,5 @@
 <div class="card">
-  <div class="card-header">
-    Product List
-  </div>
+  <div class="card-header">{{pageTitle}}</div>
   <div class="card-body">
     <div class="row">
       <div class="col-md-2">Filter by:</div>
@@ -15,7 +13,7 @@
       </div>
     </div>
     <div class="table-responsive">
-      <table class="table">
+      <table class="table" *ngIf="products.length">
         <thead>
           <tr>
             <th>
