--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -28,7 +28,9 @@
         </thead>
         <tbody>
         <tr *ngFor="let product of products">
-          <td></td>
+          <td>
+            <img [style.width.px]="imageWidth" [src]="product.imageUrl" [title]="product.productName" alt="{{product.productName}}">
+          </td>
           <td>{{product.productName}}</td>
           <td>{{product.productCode}}</td>
           <td>{{product.releaseDate}}</td>
