--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -4,12 +4,12 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <input type="text"/>
+        <input type="text" [(ngModel)]="listFilter"/>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6">
-        <h4>Filtered by:</h4>
+        <h4>Filtered by: {{listFilter}}</h4>
       </div>
     </div>
     <div class="table-responsive">
@@ -39,9 +39,9 @@
               [title]="product.productName" alt="{{product.productName}}">
           </td>
           <td>{{product.productName}}</td>
-          <td>{{product.productCode}}</td>
+          <td>{{product.productCode | lowercase}}</td>
           <td>{{product.releaseDate}}</td>
-          <td>{{product.price}}</td>
+          <td>{{product.price | currency: 'USD':'symbol':'1.2-2'}}</td>
           <td>{{product.starRating}}</td>
         </tr>
 
