--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -39,7 +39,7 @@
               [title]="product.productName" alt="{{product.productName}}">
           </td>
           <td>{{product.productName}}</td>
-          <td>{{product.productCode | lowercase}}</td>
+          <td>{{product.productCode | uppercase | convertToSpaces:'-' }}</td>
           <td>{{product.releaseDate}}</td>
           <td>{{product.price | currency: 'USD':'symbol':'1.2-2'}}</td>
           <td>{{product.starRating}}</td>
