--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -42,7 +42,7 @@
           <td>{{product.productCode | uppercase | convertToSpaces:'-' }}</td>
           <td>{{product.releaseDate}}</td>
           <td>{{product.price | currency: 'USD':'symbol':'1.2-2'}}</td>
-          <td>{{product.starRating}}</td>
+          <td><pm-star [rating]="product.starRating" ></pm-star></td>
         </tr>
 
         </tbody>
