--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -3,7 +3,7 @@
     {{ pageTitle + ':' + product?.productId}}
   </div>
   <div class="card-footer">
-    <button class="btn btn-outline-secondary" style="width: 80px" (click)="onBack()">
+    <button class="btn btn-outline-secondary" style="width: 80px" (click)="onBack($event)">
       <i class="fa fa-chevron-left"></i>
       Back
     </button>
